--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
             <section class="img-heading">
             <img src="https://www.datocms-assets.com/6524/1654255896-copy-of-voorhoede-borrel-2020-1.jpg" class="intro-img">
             <h3 class="intro-title">De toekomst van front-end</h3>
-        </section>
+            <h4 class="intro-text">Op 1 oktober 2022 bestaat De Voorhoede 10 jaar! Ga mee op een trip down memorylane of vier het lustrum met ons via een van de events.</h4>
         </section>
 
-        Op 1 oktober 2022 bestaat De Voorhoede 10 jaar! Ga mee op een trip down memorylane of vier het lustrum met ons via een van de events.
 
         <article class="intro-2">
             <h3 class="intro2-title">Cijfers & facts: Voorhoede facts </h3>
