facts and numbers fixings

--- a/index.html
+++ b/index.html
@@ -27,9 +27,23 @@
         </section>
 
 
-        <article class="intro-2">
-            <h3 class="intro2-title">Cijfers & facts: Voorhoede facts </h3>
-        </article>
+        <section class="facts-and-numbers">
+            <h2>Cijfers & facts: Voorhoede facts </h2>
+            <ul>
+                <li><span>10</span>jaar de voorhoede</li>
+                <li><span>1</span>CTO</li>
+                <li><span>2</span>kantoren in Delft & Amsterdam</li>
+                <li><span>30</span>collega's in dienst</li>
+                <li><span>7</span>tech leads</li>
+                <li><span>85</span>blogs geschreven</li>
+                <li><span>500</span>projecten opgeleverd</li>
+                <li><span>33</span>bomen geplant</li>
+                <li><span>19</span>meetups georganiseerd</li>
+                <li><span>8</span>masterclasses gegeven</li>
+                <li><span>136</span>Code classes</li>
+                <li><span>87</span>Code talks</li>
+            </ul>
+        </section>
 
         <section class="middle">
             <img src="https://www.datocms-assets.com/6524/1651831740-sam_8931.jpg" class="middle-img">
