--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
         <section class="intro">
             <img src="https://www.datocms-assets.com/6524/1654255896-copy-of-voorhoede-borrel-2020-1.jpg" class="intro-img">
             <h3 class="intro-title">De toekomst van front-end</h3>
-            <h4 class="intro-text">Op 1 oktober 2022 bestaat De Voorhoede 10 jaar! Ga mee op een trip down memorylane of vier het lustrum met ons via een van de events.</h4>
+            <h4 class="intro-text">Op 1 oktober 2022 bestaat De Voorhoede alweer 10 jaar: een lustrum! De afgelopen jaren is onze organisatie flink gegroeid: in kantoor, kennis en collega’s. Er is veel veranderd. Niet alleen bij De Voorhoede, maar ook op front-end gebied. Natuurlijk hebben we ook heel veel plannen voor de komende jaren. Blik met ons terug op de eerste 10 jaar en kijk mee naar onze versepllingen voor de toekomst.</h4>
         </section>
-
 
         <section class="facts-and-numbers">
             <h2>Cijfers & facts: Voorhoede facts </h2>
@@ -45,12 +44,16 @@
             </ul>
         </section>
 
-        <section class="middle">
+        <article class="middle">
             <img src="https://www.datocms-assets.com/6524/1651831740-sam_8931.jpg" class="middle-img">
             <h3 class="middle-title">Onze visie op frontend</h3>
-            <p class="middle-text">Dit jaar bestaat De Voorhoede 10 jaar. In al die jaren is front-end gegroeid van een niche naar een onderdeel van alles. Wij vinden het erg leuk om koplopers te zijn en kijken nu naar wat de toekomst van front-end ons gaat brengen.\n\n[Lees alles over de toekomst van front-end](https://www.voorhoede.nl/en/blog/future-front-end-replaceable-inadequate-innovative)</p>
-            <h4 class="middle-info">Lees alles over de toekomst van front-end</h4>
-        </section>
+            <p class="middle-text">Dit jaar bestaat De Voorhoede 10 jaar. In al die jaren is front-end gegroeid van een niche naar een onderdeel van alles. Wij vinden het erg leuk om koplopers te zijn en kijken nu naar wat de toekomst van front-end ons gaat brengen.</p>
+      
+            <button class="button button1"><a href="https://www.voorhoede.nl/en/blog/future-front-end-replaceable-inadequate-innovative"><p>Lees alles over de toekomst van front-end</p></a></button> 
+
+
+
+        </article>
     </main>
 
 </body>
