3e stukje geprobeerd Jasper

--- a/index.html
+++ b/index.html
@@ -44,16 +44,20 @@
             </ul>
         </section>
 
-        <article class="middle">
+        <section class="middle">
             <img src="https://www.datocms-assets.com/6524/1651831740-sam_8931.jpg" class="middle-img">
             <h3 class="middle-title">Onze visie op frontend</h3>
             <p class="middle-text">Dit jaar bestaat De Voorhoede 10 jaar. In al die jaren is front-end gegroeid van een niche naar een onderdeel van alles. Wij vinden het erg leuk om koplopers te zijn en kijken nu naar wat de toekomst van front-end ons gaat brengen.</p>
-      
             <button class="button button1"><a href="https://www.voorhoede.nl/en/blog/future-front-end-replaceable-inadequate-innovative"><p>Lees alles over de toekomst van front-end</p></a></button> 
+        </section>
 
-
-
-        </article>
+        <section class="jasper">
+            <img src="images/B4C87521-F112-40B8-8A13-89B6F6715E75_1_201_a.jpeg" class=img-3>
+            <h3 class="jasper-title">De grote droom van Jasper:</h3>
+            <p class="jasper-text">''Het klinkt weinig ambitieus, maar ik hoop dat we vooral dit kunnen blijven doen, wat we doen. Als hecht en gespecialiseerd team een impact maken binnen het vakgebied. En voorop lopen in de beste front-end oplossingen.''</p>
+            <button class="button button2"><a href="https://www.voorhoede.nl/en/blog/10-jaar-interview-jasper/"><p>Lees het hele interview</p></a></button>
+        </section>
+        
     </main>
 
 </body>
