--- a/index.html
+++ b/index.html
@@ -52,12 +52,97 @@
         </section>
 
         <section class="jasper">
-            <img src="images/B4C87521-F112-40B8-8A13-89B6F6715E75_1_201_a.jpeg" class=img-3>
+            <img src="/images/B4C87521-F112-40B8-8A13-89B6F6715E75_1_201_a.jpeg" class=img-3>
             <h3 class="jasper-title">De grote droom van Jasper:</h3>
             <p class="jasper-text">''Het klinkt weinig ambitieus, maar ik hoop dat we vooral dit kunnen blijven doen, wat we doen. Als hecht en gespecialiseerd team een impact maken binnen het vakgebied. En voorop lopen in de beste front-end oplossingen.''</p>
             <button class="button button2"><a href="https://www.voorhoede.nl/en/blog/10-jaar-interview-jasper/"><p>Lees het hele interview</p></a></button>
         </section>
-        
+
+
+    <div class="timeline">
+        <div class="container left">
+          <div class="content">
+            <h3>1 oktober 2012</h3>
+            <h2>Oprichting De Voorhoede</h2>
+            <p></p>
+          </div>
+        </div>
+
+        <div class="container right">
+          <div class="content">
+            <h3>01 juli 2013</h3>
+            <h2>Eerste Web App voor TV</h2>
+            <p>Ziggo SGUI met jQueryMX</p>
+            <img src="https://www.datocms-assets.com/6524/1656341389-bl65gancyaiv9hu.jpeg" class="timeline-img">
+          </div>
+        </div>
+
+        <div class="container left">
+          <div class="content">
+            <h3>01 juni 2014</h3>
+            <h2>Eerste Single Page App</h2>
+            <p>TBA CommTrac met Angular.JS</p>
+          </div>
+        </div>
+
+        <div class="container right">
+          <div class="content">
+            <h3>13 maart 2016</h3>
+            <h2>Begonnen met lesgeven op de Hogeschool van Amsterdam</h2>
+            <p>Minors gericht op webdevelopment</p>
+            <img src="https://www.datocms-assets.com/6524/1656341338-cdgfayxw8aaepae.jpeg" class="timeline-img">
+          </div>
+        </div>
+
+        <div class="container left">
+          <div class="content">
+            <h3>17 augustus 2016</h3>
+            <h2>Onze eerste Meetup</h2>
+            <p>Onze eerste meetup georganiseerd: Front-end Forward in Amsterdam</p>
+          </div>
+        </div>
+
+        <div class="container right">
+          <div class="content">
+            <h3>07 november 2016</h3>
+            <h2>Eerste code class</h2>
+            <p>Collega's leren elkaar nieuwe dingen</p>
+            <img src="https://www.datocms-assets.com/6524/1656341294-cw-akzzw8aas4vt.jpeg" class="timeline-img">
+          </div>
+        </div>
+
+      <div class="container left">
+        <div class="content">
+          <h3>01 januari 2019</h3>
+          <h2>Eerste kantoor in Delft</h2>
+          <p>We namen intrek in de coworkingspace van Vakhuiswerk</p>
+        </div>
+      </div>
+
+      <div class="container right">
+        <div class="content">
+          <h3>21 januari 2020</h3>
+          <h2>Opening nieuw kantoor Delft"</h2>
+          <p>Onze eigen plek aan de Koornmarkt</p>
+          <img src="https://www.datocms-assets.com/6524/1653893865-copy-of-img_20210705_141212.jpg" class="timeline-img">
+        </div>
+      </div>
+
+      <div class="container right">
+        <div class="content">
+          <h3>21 september 2021</h3>
+          <h2>Opening nieuw kantoor Amsterdam</h2>
+          <p>Samen met Hike One hebben we nu een kantoor in de Houthavens</p>
+          <img src="https://www.datocms-assets.com/6524/1653893718-copy-of-dsc05264.jpg" class="timeline-img">
+        </div>
+      </div>
+    </div>
+
+    <section class="pictures-column">
+        <h2></h2>
+    </section>
+
+
     </main>
 
 </body>
