fotos poging mislukt

--- a/index.html
+++ b/index.html
@@ -139,7 +139,25 @@
     </div>
 
     <section class="pictures-column">
-        <h2></h2>
+        <h2>Een reis door de tijd</h2>
+        <div class="images">
+        <img src="https://www.datocms-assets.com/6524/1653893535-copy-of-img_2627-fefw_voorhoede.jpg" class="images">
+        <img src="https://www.datocms-assets.com/6524/1652260840-img_20220117_114859.jpg" class="images">
+        <img src="https://www.datocms-assets.com/6524/1653893584-copy-of-photo-03-03-2016-13-50-52.jpg" class="images">
+        <img src="https://www.datocms-assets.com/6524/1626447055-img2346-nog-meer-final.jpg" class="images">
+        <img src="https://www.datocms-assets.com/6524/1653893610-copy-of-2016-10-01-photo-00000006.jpg" class="images">
+        <img src="https://www.datocms-assets.com/6524/1651831476-voorhoede-weekendje-2019-16.jpg" class="images">
+        <img src="https://www.datocms-assets.com/6524/1651831472-voorhoede_weekend_2021_1060095-23.jpg" class="images">
+        <img src="https://www.datocms-assets.com/6524/1653893842-copy-of-whatsapp-image-2018-09-30-at-12-42-27.jpeg" class="images">
+        <img src="https://www.datocms-assets.com/6524/1653893635-copy-of-foto-25-05-18-10-36-41.jpg" class="images">
+        <img src="https://www.datocms-assets.com/6524/1651831466-dsc_1471.jpg" class="images">
+        <img src="https://www.datocms-assets.com/6524/1653893658-copy-of-cn_nz_fxeaazmdy.jpg" class="images">
+        <img src="https://www.datocms-assets.com/6524/1653893699-copy-of-dsc_1295.jpg" class="images">
+        <img src="https://www.datocms-assets.com/6524/1651831747-voorhoede_weekend_2021_1060094-22.jpg" class="images">
+        <img src="https://www.datocms-assets.com/6524/1653893757-copy-of-img_5003.jpg" class="images">
+        <img src="https://www.datocms-assets.com/6524/1653893893-copy-of-img_7647.jpg" class="images">
+        <img src="https://www.datocms-assets.com/6524/1654260572-copy-of-sam_9717.jpg" class="images">
+        </div>
     </section>
 
 
