foto jasper gefixt

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         </section>
 
         <section class="jasper">
-            <img src="/images/B4C87521-F112-40B8-8A13-89B6F6715E75_1_201_a.jpeg" class=img-3>
+          <div class="img-wrapper">
+            <img src="https://www.datocms-assets.com/6524/1602158368-jasper27a4573-1.jpg" class="img-3">
+          </div>
             <h3 class="jasper-title">De grote droom van Jasper:</h3>
             <p class="jasper-text">''Het klinkt weinig ambitieus, maar ik hoop dat we vooral dit kunnen blijven doen, wat we doen. Als hecht en gespecialiseerd team een impact maken binnen het vakgebied. En voorop lopen in de beste front-end oplossingen.''</p>
             <button class="button button2"><a href="https://www.voorhoede.nl/en/blog/10-jaar-interview-jasper/"><p>Lees het hele interview</p></a></button>
@@ -140,7 +142,6 @@
 
     <section class="pictures-column">
         <h2>Een reis door de tijd</h2>
-        <div class="images">
         <img src="https://www.datocms-assets.com/6524/1653893535-copy-of-img_2627-fefw_voorhoede.jpg" class="images">
         <img src="https://www.datocms-assets.com/6524/1652260840-img_20220117_114859.jpg" class="images">
         <img src="https://www.datocms-assets.com/6524/1653893584-copy-of-photo-03-03-2016-13-50-52.jpg" class="images">
@@ -157,7 +158,6 @@
         <img src="https://www.datocms-assets.com/6524/1653893757-copy-of-img_5003.jpg" class="images">
         <img src="https://www.datocms-assets.com/6524/1653893893-copy-of-img_7647.jpg" class="images">
         <img src="https://www.datocms-assets.com/6524/1654260572-copy-of-sam_9717.jpg" class="images">
-        </div>
     </section>
 
 
