--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 
     <section class="pictures-column">
         <h2>Een reis door de tijd</h2>
+        <div class=""
         <img src="https://www.datocms-assets.com/6524/1653893535-copy-of-img_2627-fefw_voorhoede.jpg" class="images">
         <img src="https://www.datocms-assets.com/6524/1652260840-img_20220117_114859.jpg" class="images">
         <img src="https://www.datocms-assets.com/6524/1653893584-copy-of-photo-03-03-2016-13-50-52.jpg" class="images">
