--- a/index.html
+++ b/index.html
@@ -142,7 +142,6 @@
 
     <section class="pictures-column">
         <h2>Een reis door de tijd</h2>
-        <div class=""
         <img src="https://www.datocms-assets.com/6524/1653893535-copy-of-img_2627-fefw_voorhoede.jpg" class="images">
         <img src="https://www.datocms-assets.com/6524/1652260840-img_20220117_114859.jpg" class="images">
         <img src="https://www.datocms-assets.com/6524/1653893584-copy-of-photo-03-03-2016-13-50-52.jpg" class="images">
@@ -159,6 +158,10 @@
         <img src="https://www.datocms-assets.com/6524/1653893757-copy-of-img_5003.jpg" class="images">
         <img src="https://www.datocms-assets.com/6524/1653893893-copy-of-img_7647.jpg" class="images">
         <img src="https://www.datocms-assets.com/6524/1654260572-copy-of-sam_9717.jpg" class="images">
+    </section>
+
+    <section class="form-yellow">
+      <h2>Hiep Hiep Hoera!</h2>
     </section>
 
 
