--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
     <main>
         <section class="intro">
             <img src="https://www.datocms-assets.com/6524/1654255896-copy-of-voorhoede-borrel-2020-1.jpg" class="intro-img">
-            <h3 class="intro-title">De toekomst van front-end</h3>
-            <h4 class="intro-text">Op 1 oktober 2022 bestaat De Voorhoede alweer 10 jaar: een lustrum! De afgelopen jaren is onze organisatie flink gegroeid: in kantoor, kennis en collega’s. Er is veel veranderd. Niet alleen bij De Voorhoede, maar ook op front-end gebied. Natuurlijk hebben we ook heel veel plannen voor de komende jaren. Blik met ons terug op de eerste 10 jaar en kijk mee naar onze versepllingen voor de toekomst.</h4>
+
+            <div class="intro-headers">
+              <h3 class="intro-title">De toekomst van front-end</h3>
+              <h4 class="intro-text">Op 1 oktober 2022 bestaat De Voorhoede alweer 10 jaar: een lustrum! De afgelopen jaren is onze organisatie flink gegroeid: in kantoor, kennis en collega’s. Er is veel veranderd. Niet alleen bij De Voorhoede, maar ook op front-end gebied. Natuurlijk hebben we ook heel veel plannen voor de komende jaren. Blik met ons terug op de eerste 10 jaar en kijk mee naar onze versepllingen voor de toekomst.</h4>
+            </div>
         </section>
 
         <section class="facts-and-numbers">
@@ -162,8 +165,36 @@
 
     <section class="form-yellow">
       <h2>Hiep Hiep Hoera!</h2>
+      <h3>Je felicitatie sturen via ons formulier, dat kan!</h3>
     </section>
 
+  <section class="form">
+    <form>
+      <label for="fname">Mijn naam is: </label><br>
+      <input type="text" placeholder="Naam" name="fname"><br>
+      <label for="lname">Mijn email adres:</label><br>
+      <input type="email" name="lname" placeholder="Email"><br><br>
+      <label for="lname">Mijn bericht:</label><br>
+      <input type="text" name="lname" placeholder="Felicitatie"><br><br>
+      <input type="versturen" value="Versturen →">
+    </form> 
+  </section>
+
+  <section class="messages">
+    <h2>Felicitaties</h2>
+    <div class="message1">
+    <h3>''Gefeliciteerd met jullie 10 jaar! Op nog vele jaren!''</h3>
+    <p>door Koop</p>
+  </div>
+  <div class="message1">
+    <h3>''Vanaf het begin er bij geweest. Op naar de volgende 10''</h3>
+    <p>door Declan</p>
+  </div>    
+  <div class="message1">
+    <h3>“Gefeliciteerd!”</h3>
+    <p>door Jasper</p>
+  </div>
+  </section>
 
     </main>
 
