--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <input type="email" name="lname" placeholder="Email"><br><br>
       <label for="lname">Mijn bericht:</label><br>
       <input type="text" name="lname" placeholder="Felicitatie"><br><br>
-      <input class="button3" type="versturen" value="Versturen →">
+      <input type="versturen" value="Versturen →">
     </form> 
   </section>
 
